objects/FinServ__LifeEvent__c.object
<CustomObject>
    <description>A client&apos;s life event, such as a birth or marriage.</description>
    <fields>
        <fullName>FinServ__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Life Events</relationshipLabel>
        <relationshipName>Life_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__DiscussionNote__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Discussion Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__EventDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__EventType__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Baby</fullName>
                </value>
                <value>
                    <fullName>New Job</fullName>
                </value>
                <value>
                    <fullName>New Home</fullName>
                </value>
                <value>
                    <fullName>College</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__FinancialGoal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Goal</label>
        <referenceTo>FinServ__FinancialGoal__c</referenceTo>
        <relationshipLabel>Life Events</relationshipLabel>
        <relationshipName>Life_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__GoalType__c</fullName>
        <label>Goal Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FinServ__EventType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Saving for College</fullName>
                </value>
                <value>
                    <fullName>Saving for Retirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Life Event</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LE-{0000}</displayFormat>
        <label>Life Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Life Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>